<resources>
    <string name="app_name">Gestio Material GIRES</string>
    <string name="Comandesret">Comandes per retornar</string>
    <string name="Comandesper">Comandes per preparar</string>
    <string name="Btnbuscar">CERCAR</string>
    <string name="Confirmar">Confirmar</string>
    <string name="Borrar">BORRAR</string>
    <string name="LlistaMaterial">Llistat de material:</string>
    <string name="Retorncomanda">Comanda Entregada</string>
    <string name="BotoEnrere">Enrere</string>
    <string name="NameComanda">Nom de la comanda:</string>
    <string name="NomIdentificacio">Nom:</string>
    <string name="Llicencia">Llicència:</string>
    <string name="Cursos">Cursos:</string>
    <string name="Ninguna">Cap</string>
    <string name="normativa">Normativa</string>
    <string name="usuari">Usuaris</string>
    />
</resources>
